examples/test/testpolicy19767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19767
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key37: value37
      key31: value35
      key36: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value37
      podSelector:
        matchLabels:
          key45: value46
